WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278499
[Grid] Some intrinsic sizing for grid item methods incorrectly named in GridTrackSizingAlgorithm
https://bugs.webkit.org/show_bug.cgi?id=278499
Summary
[Grid] Some intrinsic sizing for grid item methods incorrectly named in GridT...
Sammy Gill
Reported
2024-08-21 15:52:02 PDT
GridTrackSizingAlgorithm defines minContentForGridItem, maxContentForGridItem, and minSizeForGridItem to represent the min content contribution, max content contribution, and minimum contributions, respectively. We should rename these to properly represent the spec terms as currently they can be misleading in certain contexts. For example, the min content size of a grid item is different min content contribution as the former does not consider the minimum size property while the latter does.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-21 15:52:20 PDT
<
rdar://problem/134451435
>
Sammy Gill
Comment 2
2024-08-21 16:14:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32561
EWS
Comment 3
2024-08-22 18:04:23 PDT
Committed
282643@main
(51781e32c383): <
https://commits.webkit.org/282643@main
> Reviewed commits have been landed. Closing PR #32561 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug