[Grid] Rename min/maxContentForGridItem and minSizeForGridItem in GridTrackSizingAlgorithm. https://bugs.webkit.org/show_bug.cgi?id=278499 rdar://134451435

Reviewed by Vitor Roriz.

During the grid track sizing algorithm, the spec will use different
types of grid item sizes as part of the process. In particular, it
may use the min content contribution, max content contribution, or
minimum contribution of a grid item.

The GridTrackSizingAlgorithm code has minContentForGridItem,
maxContentForGridItem, and minSizeForGridItem to try to capture these
ideas. These current names are misleading because the first two have
their own spec terms/definitions which are not the same. For example
the min/max content size of a box does not take into consideration the
min/max size properties of the box whereas the later does. The last one
can just be better named to match the spec.

* Source/WebCore/rendering/GridTrackSizingAlgorithm.cpp:
(WebCore::GridTrackSizingAlgorithm::sizeTrackToFitNonSpanningItem):
(WebCore::GridTrackSizingAlgorithm::itemSizeForTrackSizeComputationPhase const):
(WebCore::GridTrackSizingAlgorithmStrategy::minContentContributionForGridItem const):
(WebCore::GridTrackSizingAlgorithmStrategy::maxContentContributionForGridItem const):
(WebCore::GridTrackSizingAlgorithmStrategy::minContributionForGridItem const):
(WebCore::IndefiniteSizeStrategy::accumulateFlexFraction const):
(WebCore::DefiniteSizeStrategy::minContentContributionForGridItem const):
(WebCore::GridTrackSizingAlgorithm::computeDefiniteAndIndefiniteItemsForMasonry):
(WebCore::GridTrackSizingAlgorithmStrategy::minContentForGridItem const): Deleted.
(WebCore::GridTrackSizingAlgorithmStrategy::maxContentForGridItem const): Deleted.
(WebCore::GridTrackSizingAlgorithmStrategy::minSizeForGridItem const): Deleted.
(WebCore::DefiniteSizeStrategy::minContentForGridItem const): Deleted.
* Source/WebCore/rendering/GridTrackSizingAlgorithm.h:

Canonical link: https://commits.webkit.org/282643@main